# CARNA

./: .hgignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  configure.ac
CP-draft/: changes.txt  cpRNAalignment.tex  refs.bib
Data/: AF008220.pp  Alpha_RBS.pk.fa  Antizyme_FSE.pk.fa  Corona_FSE.pk.fa  Corona_pk3.pk.fa  Entero_OriR.pk.fa  IRES_Cripavirus.pk.fa  Intron_gpI.pk.fa  Parecho_CRE.pk.fa  Prion_pknot.pk.fa  RNaseP_arch.pk.fa  RNaseP_bact_b.pk.fa  RNaseP_nuc.pk.fa  RydC.pk.fa  Telomerase-vert.pk.fa  Tymo_tRNA-like.pk.fa  Z11880.pp  example-anchors.fa  example-woanchors.fa  example.fa  fdhA.pp  fruA.pp  fwdB.pp  no-struct.fa  tmRNA.pk.fa  toy.fa  toyA.pp  toyB.pp  tpp-riboswitch.fa  vhuD.pp
Doc/examples/: Makefile  queens.cpp
Doc/examples/support/: Makefile  example.cpp  example.hpp  options.cpp  options.hpp
Doc/propagator_example/: GC_LatticeNeighbored2.cc  GC_LatticeNeighbored2.hh
Draft/: constraintRNAalignment.tex  easychair.tcp  reviews.txt
Papers/CP10/: references.bib  refs.bib
Papers/CP10/Submission/Final97/: cpRNAalignment.tex
Papers/WCB10/: constraintRNAalignment.tex  reviews.txt
Utils/: Makefile.am  cRNAalign.pl  carna.pl  carna.pl.in
src/: Makefile  Makefile.am  Makefile.manual  RNAalignment.cc  RNAalignment.cpp  RNAalignment.hh  RnaAlignment.cc  RnaAlignment.hh  WinDisplay.cpp  WinDisplay.hh  WinHandler.cc  WinHandler.hh  alignment_score.cc  alignment_score.hh  carna.cc  exampleVisualization.cpp  rna_alignment_params.hh  row_range_matrix.hh
src/DeadEnd/: RNAalignment.hh  WinDisplay.cpp  alignment_score.cc  alignment_score.hh
src/LocARNA/: README  alignment.cc  alphabet.hh  arc_matches.cc  arc_matches.hh  infty_arith_int.hh  matrices.hh  options.cc  params.hh  ribosum85_60.icc  rna_data.cc  rna_data.hh  scoring.cc  scoring.hh  sequence.cc  sequence.hh
src/Propagator_example/: Makefile.manual  NEq.cc
src/Tests/: calls.sh
src/alignmentScorePropagator/: NEq.cc  NEq.hh
