bin_PROGRAMS = RNAalignment exampleVisualization

exampleVisualization_SOURCES = exampleVisualization.cpp  \
	WinDisplay.cpp 

RNAalignment_SOURCES = RNAalignment.cpp \
	LocARNA/rna_data.cc LocARNA/rna_data.hh \
	LocARNA/sequence.hh LocARNA/sequence.cc \
	LocARNA/alphabet.hh LocARNA/alphabet.icc \
	LocARNA/matrices.hh LocARNA/sparse_matrix.hh \
	LocARNA/options.cc LocARNA/options.hh \
	LocARNA/arc_matches.cc LocARNA/arc_matches.hh \
	LocARNA/scoring.cc LocARNA/scoring.hh \
	LocARNA/ribosum.cc LocARNA/ribosum.hh \
	LocARNA/basepairs.cc LocARNA/basepairs.hh \
	LocARNA/infty_arith_int.cc LocARNA/infty_arith_int.hh \
	LocARNA/anchor_constraints.cc LocARNA/anchor_constraints.hh \
	alignment_score.hh alignment_score.cc

#Propagator_example/Neq.cc Propagator_example/Neq.hh 
