bin_PROGRAMS = carna #exampleVisualization

#exampleVisualization_SOURCES = exampleVisualization.cpp  \
#	WinDisplay.cpp 

carna_SOURCES = RNAalignment.hh RNAalignment.cpp \
	LocARNA/rna_data.cc LocARNA/rna_data.hh \
	LocARNA/sequence.hh LocARNA/sequence.cc \
	LocARNA/alphabet.hh LocARNA/alphabet.icc \
	LocARNA/matrices.hh LocARNA/sparse_matrix.hh \
	LocARNA/options.cc LocARNA/options.hh \
	LocARNA/arc_matches.cc LocARNA/arc_matches.hh \
	LocARNA/scoring.cc LocARNA/scoring.hh \
	LocARNA/ribosum.cc LocARNA/ribosum.hh LocARNA/ribosum85_60.icc \
	LocARNA/basepairs.cc LocARNA/basepairs.hh \
	LocARNA/infty_arith_int.cc LocARNA/infty_arith_int.hh \
	LocARNA/anchor_constraints.cc LocARNA/anchor_constraints.hh \
	LocARNA/stral_score.cc LocARNA/stral_score.hh \
	LocARNA/params.hh \
	LocARNA/match_probs.hh LocARNA/match_probs.cc \
	LocARNA/alignment.hh \
	WinHandler.hh \
	alignment_score.hh alignment_score.cc

#Propagator_example/Neq.cc Propagator_example/Neq.hh 
