AM_CPPFLAGS = $(DEPS_CFLAGS)
carna_LDADD = $(DEPS_LIBS)

bin_PROGRAMS = carna #exampleVisualization

#exampleVisualization_SOURCES = exampleVisualization.cpp  \
#	WinDisplay.cpp 

carna_SOURCES = RNAalignment.hh RNAalignment.cpp WinHandler.hh	\
		alignment_score.hh alignment_score.cc

#Propagator_example/Neq.cc Propagator_example/Neq.hh 
